lolspeak.BNF
<lolspeak> 	    ::=	<noun_phrase> <verb> <noun_phrase>
<noun_phrase>	::=	<article> <noun>
<adjective>	 	    ::=	fat  |  happy  | mean |hungry
<adverb>	 	    ::=	accidently  |  quickly  | secretly
<verb>	 	    ::=	lovez  |  hatez  | ates

<noun>	 	    ::=	dawg  |  kat  |  rat
<article>	    ::=	a  | teh
